--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Kanban</title>
   </head>
-  <body>
+  <body style="background-color: white !important">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
